# stpy

./: .gitignore  .readthedocs.yaml  README.md  codecov.yml  coverage.xml  env.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  python-publish.yml
codes/: summarize_gScholarAlerts.py
codes/crawl_web/: automatic_email  save_image_from_web.py  trial.py
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  modules.rst  stpy.codes.rst  stpy.rst
docs/source/autosummary/: stpy.config.PROJECT_ROOT.rst  stpy.summarize_gScholarAlerts.extract_publication_details.rst  stpy.summarize_gScholarAlerts.extract_publication_info.rst  stpy.summarize_gScholarAlerts.extract_text_from_pdf.rst  stpy.summarize_gScholarAlerts.extract_text_from_webpage.rst  stpy.summarize_gScholarAlerts.fetch_unread_emails.rst  stpy.summarize_gScholarAlerts.get_more_info.rst  stpy.summarize_gScholarAlerts.get_publication_details.rst  stpy.summarize_gScholarAlerts.is_pdf_url.rst  stpy.summarize_gScholarAlerts.parse_email.rst  stpy.summarize_gScholarAlerts.rst  stpy.summarize_gScholarAlerts.summarize_publications.rst  stpy.utils.cas2smiles.rst  stpy.utils.concat_fingerprints.rst  stpy.utils.concat_fingerprints_df.rst  (+5 more)
stpy/: config.py  summarize_gScholarAlerts.py  utils.py
stpy/codes/: summarize_gScholarAlerts.py  test_utils.py  utils.py
stpy/crawl_web/: automatic_email  save_image_from_web.py  trial.py
stpy/notebooks/: temp.ipynb
stpy/tests/: test_utils.py
stpy/tools_tips/: GitCommitMessage.md
tests/: test_utils.py
tools_tips/: Tmux.md  trials.sql
(+1 files in other folders)
