[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stpy"
version = "0.1.1"
description = "A Python package for data science and cheminformatics utilities."
authors = [{name="Lihua Deng", email="lihuad09@qq.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "requests",
    "rdkit",
    "scikit-learn",
]
[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]

[tool.pytest.ini_options]
addopts = "--cov=stpy --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
